# autoluce

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  RESEARCH.md  ROADMAP.md  agent_loop.py  cli.py  concurrency.py  experiment.py  graph.py  harness.py  ideas.py  install.sh  kl.py  objective.py  optimizer.py  patches.py  prepare.py  profiling.py  program.md  propose.py  pyproject.toml  report.py  reproduce.py  results.tsv  runner.py  selector.py  shadow.py  targets.example.toml  uncertainty.py  verify.py
autoggml/: __init__.py  agent_challenges.py  agent_cli.py  agent_config.py  agent_gate.py  agent_repository.py  agent_runner.py  agent_service.py  atomic_store.py  consult.py  contracts.py  coordination.py  coordinator_http.py  coordinator_server.py  doctor.py  fleet_cli.py  freeze.py  identifiers.py  models.py  onboard.py  prepare.py  profile_report.py  remote.py  reproduce.py  shadow.py  source_cli.py  source_layout.py  targets.py  team_config.py  team_worker.py  test_drive.py  verify_remote.py
autoluce/: __init__.py  agent_challenges.py  agent_cli.py  agent_config.py  agent_domain.py  agent_gate.py  agent_repository.py  agent_runner.py  agent_service.py  consult.py  contracts.py  coordination.py  coordinator_http.py  coordinator_server.py  doctor.py  evidence_adapters.py  fleet_cli.py  freeze.py  models.py  nvfp4.py  onboard.py  pr_overlap.py  prefill_plan.py  prepare.py  profile_report.py  profiles.py  remote.py  reproduce.py  research.py  research_archive.py  research_contract.py  research_evidence.py  shadow.py  source_cli.py  source_layout.py  targets.py  team_config.py  team_worker.py  test_drive.py  verify_remote.py  (+3 more)
benchmarks/: bonsai27b-q1-dspark-frontier.md  bonsai27b-q1-dspark.json  bonsai27b-q1-target.json  deepseek-v4-flash.json  deepseek-v4-quality.txt  deepseek-v4-test-drive.json  evidence-sha256-09a4fcb31fe4e16aee60a329f0e953096510a40fb961803109795b43d5c88545.json  evidence-sha256-927aa154d9cbb4f240c0c59f7b1292dadee6dac6dd527b846ecda2f95beb6e35.json  evidence-sha256-be8ec967d917b0a1110e55fc5571b23756f77228739a5a374b00c6898a565964.json  prompts.txt  qwen36-27b-nvfp4-prefill.json  qwen36-27b-prefill.json  qwen36-27b.json  qwen36-normal-kv-prefill-campaign.md  rtx3090-qwen36-27b-frontier.md  rtx3090-qwen36-27b-gdn-broadcast-ab.json  rtx3090-qwen36-27b-gdn-broadcast-ba.json  rtx3090-qwen36-27b-gdn-broadcast-stable-ab.json  rtx3090-qwen36-27b-gdn-broadcast-stable-ba.json  rtx3090-qwen36-27b-gdn-broadcast.md  rtx3090-qwen36-27b-gdn-inplace-rejected.json  rtx3090-qwen36-27b-iq4xs-parity-raw.json  rtx3090-qwen36-27b-iq4xs-parity.md  rtx3090-qwen36-27b-iq4xs-vendorsync-determinism.json  rtx3090-qwen36-27b-iq4xs-vendorsync-local-mod-gdn.diff  rtx3090-qwen36-27b-iq4xs-vendorsync-local-mod-ggmlcuda.diff  rtx3090-qwen36-27b-iq4xs-vendorsync-measure.py  rtx3090-qwen36-27b-iq4xs-vendorsync-notes.md  rtx3090-qwen36-27b-iq4xs-vendorsync-raw.json  rtx3090-qwen36-27b-lazy-rollback.md  rtx3090-qwen36-27b-llama-prefill-control.json  rtx3090-qwen36-27b-mmq-current-tip.md  rtx3090-qwen36-27b-mmq-generation-candidate.json  rtx3090-qwen36-27b-mmq-generation-clean.json  rtx3090-qwen36-27b-mmq-logit-quality.json  rtx3090-qwen36-27b-mmq-quality.md  rtx3090-qwen36-27b-no-fwht-rejected.json  rtx3090-qwen36-27b-no-fwht-rejected.md  rtx3090-qwen36-27b-prefill-cuda-api.csv  rtx3090-qwen36-27b-prefill-gap-forensics.md  (+16 more)
examples/: research-campaign.json  research-measurement.json  upstream-llama-reference.json
models/: catalog.yaml
native/nvfp4/: CMakeLists.txt  README.md  bench_nvfp4.cu  nvfp4.cu  nvfp4.cuh  test_nvfp4.cu
patches/: deepseek-v4-sinkhorn-77bccaa.json  deepseek-v4-sinkhorn-77bccaa.patch
python_tests/: test_agent_challenges.py  test_bench_bonsai_prompt_benchmark.py  test_bench_statistics.py  test_bonsai27b_campaign.py  test_branding.py  test_cli.py  test_concurrency.py  test_coordination.py  test_dflash_runtime.py  test_evidence_adapters.py  test_evidence_foundation.py  (+29 more)
(+149 files in other folders)
