[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoggml"
version = "2.0.0"
description = "Autonomous research harness for verifiably improving GGML inference engines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "huggingface_hub>=0.20",
]

[project.scripts]
autoggml = "cli:main"

[tool.setuptools]
# cli.py (entry point) and experiment.py (the agent-editable file) stay at the repo
# root; everything else lives in the autoggml package.
py-modules = ["cli", "experiment"]
packages = ["autoggml", "autoggml.bench", "autoggml.loop", "autoggml.ideation", "autoggml.parallel"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.6.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["python_tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"
