[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoluce"
version = "2.0.0"
description = "Distributed research harness for verifiably improving Lucebox inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "huggingface_hub>=0.20",
]

[project.scripts]
autoluce = "cli:main"

[tool.setuptools]
# cli.py (entry point) and experiment.py (the agent-editable file) stay at the repo
# root; everything else lives in the autoluce package.
py-modules = ["cli", "experiment"]
packages = ["autoluce", "autoluce.bench", "autoluce.loop", "autoluce.ideation", "autoluce.parallel", "autoluce.runtime"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.6.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["python_tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"
